# copypasta

./: .env  .gitignore  Cargo.toml  Dockerfile  create.sql  docker-compose.yml  response.sh  settings.json  start.sh
copypasta/: .env  Cargo.toml  resp_delete.sh  settings.json  start_once.sh
copypasta-auth/: Cargo.toml  Dockerfile
copypasta/src/: config.rs  main.rs  model.rs  schema.rs
copypasta/src/tests/: quick_test.rs
migrations/: 20230924174730_init.down.sql  20230924174730_init.up.sql
src/: config.rs  main.rs  model.rs
src/tests/: quick_test.rs
src/views/: mod.rs
