[package]
name = "copypasta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
anyhow="1"
httpc-test = "0.1.5"
