[package]
name = "copypasta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.6.20"
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs", "cors"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "runtime-async-std-native-tls",
    "uuid",
] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
dotenv = "0.15.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.5"
